--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,3 +1,48 @@
 .navbar {
-  min-height: 70px;
+  min-height: 80px;
+  background-color: #2b2c34;
+  display: flex;
+  flex-direction: row;
+  padding-left: 40px;
+  padding-right: 40px;
+  align-items: center;
+}
+.navbar .fakesta-title {
+  font-size: 42px;
+  font-weight: 700;
+  color: white;
+}
+.navbar .nav-items {
+  display: flex;
+  flex: 1;
+  justify-content: end;
+}
+.navbar .nav-items .premium {
+  background-color: #6246ea;
+  margin-left: 18px;
+  height: 38px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 1.1rem;
+  cursor: pointer;
+  color: white;
+}
+.navbar .nav-items .login {
+  /* background-color: p.$primary; */
+  margin-left: 18px;
+  height: 38px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 1.1rem;
+  cursor: pointer;
+  border: 2px solid white;
+  color: white;
 }/*# sourceMappingURL=navbar.css.map */
