--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,3 +1,47 @@
+@use '../../shared/palette/palette.scss' as p;
+
 .navbar {
-    min-height: 70px;
+    min-height: 80px;
+    background-color: p.$stroke;
+    display: flex;
+    flex-direction: row;
+    padding-left: 40px;
+    padding-right: 40px;
+    align-items: center;
+
+    .fakesta-title {
+        font-size: 42px;
+        font-weight: 700;
+        color: white;
+    }
+
+    .nav-items {
+        display: flex;
+        flex: 1;
+        justify-content: end;
+        @mixin navbutton {
+            margin-left: 18px;
+            height: 38px;
+            padding-left: 15px;
+            padding-right: 15px;
+            display: flex;
+            align-items: center;
+            border-radius: 4px;
+            font-weight: 600;
+            font-size: 1.1rem;
+            cursor: pointer;
+        }
+
+        .premium {
+            background-color: p.$highlight;
+            @include navbutton;
+            color: white;
+        }
+        .login {
+            /* background-color: p.$primary; */
+            @include navbutton;
+            border: 2px solid white;
+            color: white;
+        }
+    }
 }
