--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -15,6 +15,29 @@
         color: white;
     }
 
+    .link-items {
+        margin-left: 60px;
+        display: flex;
+
+        .link-item {
+            height: 38px;
+            margin-left: 15px;
+            margin-right: 15px;
+            display: flex;
+            align-items: center;
+            border-radius: 4px;
+            font-weight: 600;
+            font-size: 1.1rem;
+            cursor: pointer;
+            color: white;
+            text-decoration: underline;
+            transition: .3s ease;
+            &:hover {
+                color: p.$secondary;
+            }
+        }
+    }
+
     .nav-items {
         display: flex;
         flex: 1;
