--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -6,8 +6,26 @@
   flex-direction: row;
   height: 80px;
   background-color: #d1d1e9;
+  color: #2b2c34;
+  padding-left: 40px;
+  padding-right: 40px;
+  align-items: center;
 }
 .footer .footer-items {
   display: flex;
   flex-direction: row;
+}
+.footer .footer-items .footer-item {
+  margin-left: 15px;
+  margin-right: 15px;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 1.1rem;
+  cursor: pointer;
+  text-decoration: underline;
+  transition: 0.3s ease;
+}
+.footer .footer-items .footer-item:hover {
+  color: #6246ea;
 }/*# sourceMappingURL=footer.css.map */
